WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19169
REGRESSION: nakarte.ru searches don't work
https://bugs.webkit.org/show_bug.cgi?id=19169
Summary
REGRESSION: nakarte.ru searches don't work
Alexey Proskuryakov
Reported
2008-05-21 09:12:05 PDT
To reproduce, one needs to enter any Moscow address in Russian - nothing will be found. This was probably caused by my work on form encoding. KURL::init() works differently depending on what path is given to it - e.g. absolute paths like "/foo.html" get UTF-encoded twice! It is likely that this affects more than just XMLHttpRequest. Patch forthcoming.
Attachments
proposed fix
(6.21 KB, patch)
2008-05-21 09:50 PDT
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2008-05-21 09:39:45 PDT
<
rdar://problem/5952342
>
Alexey Proskuryakov
Comment 2
2008-05-21 09:50:50 PDT
Created
attachment 21269
[details]
proposed fix
Alexey Proskuryakov
Comment 3
2008-05-21 10:01:51 PDT
Committed in <
http://trac.webkit.org/changeset/33966
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug