        Reviewed by Darin.

https://bugs.webkit.org/show_bug.cgi?id=19169
        <rdar://5952342> REGRESSION: nakarte.ru searches don't work

        Test: http/tests/xmlhttprequest/encode-request-url.html

        * platform/KURL.cpp: (WebCore::KURL::init): Don't allow UTF-8 encoded data to be implicitly
        converted to String, as it will be encoded again by parse().



git-svn-id: svn://svn.chromium.org/blink/trunk@33966 bbb929c8-8fbe-4397-9dbb-9b2b20218538