third_party/WebKit/LayoutTests/http/tests/xmlhttprequest/resources/print-query.cgi
@@ -1,0 +1,8 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+#!/usr/bin/perl -w
+
+use CGI qw(:standard);
+my $cgi = new CGI;
+
+print "Content-type: text/plain\n\n"; 
+print $ENV{"QUERY_STRING"};
